Add extra customization options to add_header_above

--- a/tests/visual_tests/add_header_above_html.Rmd
+++ b/tests/visual_tests/add_header_above_html.Rmd
@@ -16,7 +16,8 @@ kable(dt, booktabs = T, caption = "Demo Table") %>%
   kable_styling(bootstrap_options = c("striped", "condensed"), 
                 latex_options = c("striped", "hold_position"),
                 full_width = F) %>%
-  add_header_above(c(" ", "Group 1" = 2, "Group 2[note]" = 2), italic = T) %>%
+  add_header_above(c(" ", "Group 1" = 2, "Group 2[note]" = 2), strikeout = T,
+                   italic = c(T, T, F), color = c("red", "yellow", "blue"), background = "gray", angle = 90) %>%
   add_footnote(c("table footnote"))
 ```
 
