--- a/tests/visual_tests/add_header_above_html.Rmd
+++ b/tests/visual_tests/add_header_above_html.Rmd
@@ -26,7 +26,7 @@ kable(dt, booktabs = T, caption = "Demo Table") %>%
 kable(dt, format = "html") %>%
   kable_styling(full_width = F, 
                 bootstrap_options = c("striped", "bordered")) %>%
-  add_header_above(c(" ", "a" = 2, "b" = 2)) %>%
+  add_header_above(c(" ", "a" = 2, "b" = 2), line_sep = c(10, 0, 10)) %>%
   add_header_above(c(" ", "c" = 3, "d" = 1)) %>%
   column_spec(1, "1in")
 ```
