--- a/docs/bookdown_example/index.Rmd
+++ b/docs/bookdown_example/index.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "Using kableExtra in Bookdown Projects"
+title: "Using kableExtra in Bookdown"
 author: "Hao Zhu"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
@@ -15,5 +15,7 @@ description: "This example provides documentations for using kableExtra to custo
 If you have tried to use `kableExtra` in a `bookdown` project with mutltiple formats, you may have experienced some problems. For example, you might not be able to render HTML and PDF tables at the same time using the same piece of code. At the same time, you might start to wonder if it's possible to create `bootstrap` style tables in `gitbook`. I will try to address these issues using this example. 
 
 This book is hosted at https://github.com/haozhu233/kableExtra/tree/master/docs.
+
+You can download PDF & EPUB to see the results of kableExtra in those formats using the same code. 
 
 You can find the source code for this project at https://github.com/haozhu233/kableExtra/tree/master/docs.
