--- a/docs/bookdown_example/02-bootstrap_in_gitbook.Rmd
+++ b/docs/bookdown_example/02-bootstrap_in_gitbook.Rmd
@@ -10,7 +10,7 @@ options(kableExtra.html.bsTable = T)
 mtcars[1:5, 1:5] %>%
   kable(booktabs = T) %>% 
   kable_styling(
-    bootstrap_options = c("striped","hover", "bordered"),
+    bootstrap_options = c("striped","hover", "bordered", "condensed"),
     latex_options = c("striped"),
     full_width = F
   ) %>%
